--- a/arch/arm/configs/unicornblood_defconfig
+++ b/arch/arm/configs/unicornblood_defconfig
@@ -226,6 +226,7 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ZEN=y
@@ -234,6 +235,7 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_SIO is not set
 CONFIG_DEFAULT_FIOPS=y
 # CONFIG_DEFAULT_ZEN is not set
@@ -2769,6 +2771,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_SOC_WCD9320=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -3385,6 +3388,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
+# CONFIG_EXFAT_FS is not set
 
 #
 # Pseudo filesystems
