--- a/arch/arm/configs/unicornblood_defconfig
+++ b/arch/arm/configs/unicornblood_defconfig
@@ -3,7 +3,6 @@
 # Linux/arm 3.4.0 Kernel Configuration
 #
 
-CONFIG_LOCALVERSION="-unicornblood-kernel-m8-lp"
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -44,6 +43,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
+CONFIG_LOCALVERSION="-unicornblood-kernel-m8-lp"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -224,11 +225,19 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_IOSCHED_VR is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="row"
+# CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_FIOPS=y
+# CONFIG_DEFAULT_ZEN is not set
+CONFIG_DEFAULT_IOSCHED="fiops"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -533,6 +542,7 @@ CONFIG_MSM_CACHE_DUMP_ON_PANIC=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_MSM_UARTDM_Core_v14 is not set
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
@@ -1684,6 +1694,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_WAKE_GESTURES=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_RMI4_I2C is not set
 # CONFIG_TOUCHSCREEN_HIMAX is not set
 # CONFIG_TOUCHSCREEN_ONE_LAYER_HIMAX is not set
