--- a/arch/arm/configs/unicornblood_defconfig
+++ b/arch/arm/configs/unicornblood_defconfig
@@ -231,6 +231,7 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_IOSCHED_VR is not set
+CONFIG_IOSCHED_TRIPNDROID=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -240,6 +241,8 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_FIOPS=y
 # CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="fiops"
+# CONFIG_DEFAULT_TRIPNDROID is not set
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
